--- a/project/laws-regulations.html
+++ b/project/laws-regulations.html
@@ -71,6 +71,9 @@
             <p>*see<a href="sources.html">source page</a>for sources</p>
            
         </section>
+        <section id="section1">
+            <div id="quizInvite"></div>
+        </section>
 
         <section class="section1" id="form-section">
     
