index link updated

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/2?lang=eng&id=p25#p25">Scripture</a>
 
-                <a href="project/index.html">Final Project</a>
+                <a href="https://ajcurrier.github.io/wdd131/project/index.html">Final Project</a>
 
                 <a href="flashcards/index.html">Flashcards</a>
         </div>
