universal menu script

--- a/project/laws-regulations.html
+++ b/project/laws-regulations.html
@@ -13,6 +13,7 @@
   <title>Bicyling Laws</title>
   <!-- <script src="scripts/script-laws.js" defer></script> -->
   <script src="scripts/quiz.js" defer></script>
+  <script src="scripts/universal.js" defer></script>
 </head>
 <body>
     <header>
@@ -23,6 +24,8 @@
     <main>
 
         <section id="section2">
+            <div id="quizInvite"></div>
+            <br>
   
         
             <h1>Provo Bicycling Laws</h1>
@@ -70,9 +73,6 @@
             </div>
             <p>*see<a href="sources.html">source page</a>for sources</p>
            
-        </section>
-        <section id="section1">
-            <div id="quizInvite"></div>
         </section>
 
         <section class="section1" id="form-section">
