--- a/project/faq.html
+++ b/project/faq.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
   <title>Frequently Asked Questions</title>
   <script src="scripts/script.js" defer></script>
+  <script src="scripts/universal.js" defer></script>
 </head>
 <body>
     <header>
