--- a/project/sources.html
+++ b/project/sources.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/styles.css">
   <title>Sources</title>
   <script src="scripts/script.js" defer></script>
+  <script src="scripts/universal.js" defer></script>
 </head>
 <body>
     <header>
