--- a/project/faq.html
+++ b/project/faq.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <!-- FAQ accordion -->
-        <section class="accordianSection">
+        <section class="accordionSection">
             <h1>Frequently Asked Questions</h1>
             <div id="faqContainer">
                 
@@ -46,10 +46,7 @@
 
 
     <footer id="footer-box">
-        <p>
-            &copy; <span id="currentYear"></span> Ashley Currier, Utah 
-          </p>
-          <p id="lastModified"></p>
+      
     </footer>
   
 </body>
