--- a/project/sources.html
+++ b/project/sources.html
@@ -28,11 +28,11 @@
     </main>
 
     <footer id="footer-box">
-        <p>
+        <!-- <p>
             &copy; <span id="currentYear"></span> Ashley Currier, Utah 
           </p>
           <p id="lastModified"></p>
-          <p>&#127875;Happy Halloween! &#127875;</p>
+          <p>&#127875;Happy Halloween! &#127875;</p> -->
     </footer>
   
 </body>
